services/api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: congressional-api
  labels:
    name: congressional-api
    app: congressional-data-api
